# tauri-app

./: .editorconfig  .gitignore  .npmrc  .prettierignore  README.md  commitlint.config.mjs  eslint.config.js  lerna.json  package.json  playwright.config.js  pnpm-lock.yaml  postcss.config.js  rsbuild.config.ts  tailwind.config.js  tsconfig.node.json  vite.config.ts
.github/: dependabot.yml
apps/docs/: index.md  markdown-examples.md  package.json
apps/docs/.vitepress/: config.mts
apps/docs/.vitepress/config/: index.ts  shared.ts  zh.ts
apps/docs/.vitepress/theme/: index.ts
apps/docs/demos/: antd.tsx  demo.html  demo.tsx  demo.vue  ele.vue
apps/docs/en/: index.md
apps/docs/zh/: index.md  markdown-examples.md
apps/tauri-app/: .commitlintrc.js  .editorconfig  .lintstagedrc.js  .lintstagedrc.json  .prettierrc.js  README.md  eslint.config.js  package.json  rsbuild.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
apps/tauri-app/isolation-dist/: index.js
apps/tauri-app/scripts/: check.mjs  util.mjs
apps/tauri-app/src/: App.tsx
apps/tauri-app/src-tauri/: tauri.conf.json  tauri.macos.conf.json  webview2.arm64.json
apps/tauri-app/src-tauri/src/: cmd.rs  main.rs  tray.rs
apps/tauri-app/src/stores/: menu.ts  user.ts
apps/workoss-app/: .prettierignore  package.json
apps/workoss-app/scripts/: check.mjs
apps/workoss-app/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.linux.conf.json
apps/workoss-app/src-tauri/capabilities/: desktop.json
apps/workoss-app/src-tauri/crates/env/: Cargo.toml
apps/workoss-app/src-tauri/locales/menu/: zh-CN.json
apps/workoss-app/src-tauri/src/: error.rs  hotkey.rs  lib.rs
apps/workoss-app/src-tauri/supply-chain/: config.toml
scripts/: util.mjs
sidecar-app/: README.md  move.mjs  package.json
sidecar-app/app/: index.js  package.json
sidecar-app/express/: index.js
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  webview2.x64.json
src-tauri/binaries/express/views/: index.html
src-tauri/capabilities/: default.json  desktop.json
src-tauri/locales/menu/: en-US.json
src-tauri/src/: cmd.rs  config.rs  error.rs  lib.rs  main.rs  tray.rs  window.rs
src-tauri/templates/: windows-installer-hook.nsh  workoss-desktop.desktop
src/stores/: index.ts  menu.ts  user.ts
