[package]
authors = ["Workoss <workoss@icloud.com>"]
description = "A Tauri App"
edition = "2021"
name = "react-tauri"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "tauri_app"

[build-dependencies]
tauri-build = {version = "2", features = ["codegen", "isolation"] }

[dependencies]
anyhow = "1.0"
log = {version = "0.4"}
rust-embed = {version = "8.5", features = ["include-exclude", "compression"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tauri = {version = "2", features = [
  "isolation",
  "custom-protocol",
  "devtools",
  "image",
  "image-ico",
  "image-png",
  "tray-icon",
  "macos-private-api",
] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-upload = "2"
thiserror = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-cli = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = {version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.  

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
debug = false # Disables debug information.
incremental = false # Disables incremental compilation.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers. 
strip = true # Ensures debug symbols are removed.
